--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <title>IdeaLab |  LNCT</title>
   <meta name="description" content="Self Developed personal website build with React.js">
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="RJ | Portfolio">
+  <meta itemprop="name" content="IdeaLab | LNCT">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
     content="https://raw.githubusercontent.com/ritik2727/Personal-Portfolio/main/image/portofiorj.jpg">
@@ -35,7 +35,7 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://portfolio-rust-iota.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="RJ | Portfolio">
+  <meta property="og:title" content="IdeaLab | LNCT">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/ritik2727/Personal-Portfolio/main/image/portofiorj.jpg">
